[project]
name = "multi-model-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.112.0",
    "openai>=2.44.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "typer>=0.26.8",
]
